--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.5",
+    "lucide-react": "^0.508.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
+    "sonner": "^2.0.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
